-
Bug
-
Resolution: Done
-
P1: Critical
-
6.0
-
None
-
74acbcc9f31aa2c64d076e1157979537d90d3f6d (qt/qtquickcontrols2/dev)
The style plugins don't check if the theme has already been initialised.
- resulted in
-
QTBUG-86355 Consider allowing initialisation of many themes
-
- Open
-
| For Gerrit Dashboard: QTBUG-86303 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 311898,4 | Native style: set the default system palette as QQuickTheme::System palette | wip/nativestyle | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |
| 311974,20 | Fix fallback styles overwriting themes | dev | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |
| 312842,1 | Native style: set the default system palette as QQuickTheme::System palette | dev | qt/qtquickcontrols2 | Status: ABANDONED | 0 | 0 |